fixes #519; alignment for activity center for safari

--- a/app/assets/stylesheets/css/activity.scss
+++ b/app/assets/stylesheets/css/activity.scss
@@ -13,7 +13,7 @@ $caption: #848484;
         .title {
             font-size: x-large;
             line-height: 24px;
-            padding: 0 0 0 10px;
+            padding: 0 0 0 30px;
         }
     }
     
@@ -30,7 +30,7 @@ $caption: #848484;
     }
     
     .content {
-        padding: 0 0 0 15px;
+        padding: 0 0 0 45px;
         
         .date {
             color: $caption;
@@ -42,15 +42,11 @@ $caption: #848484;
         }        
     }
     
-    /*
-    .divider {
-    border-bottom: 1px solid #cbcbcb;
-    }*/
-    
     .sprite {
         background-image: image-url("img/activity-sprite.png");
         background-repeat: no-repeat;
-        display: block;        
+        display: block;   
+        position: absolute;     
     }    
 
     .sprite-news {
